--- a/web/package.json
+++ b/web/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nav-item-frontend",
   "version": "1.0.0",
-  "author": "eooce",
+  "author": "sweet",
   "description": "nav-item-frontend",
-  "repository": "https://github.com/eooce/nav-item",
+  "repository": "https://github.com/Amosgantian/nav-item",
   "license": "MIT",
   "scripts": {
     "dev": "vite --host",
@@ -22,3 +22,4 @@
     "node": ">=14"
   }
 }
+
