--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -41,7 +41,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | lower }}/nav-item:latest
+            ghcr.io/${{ github.repository | lower }}/nav-item:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=nav-item
